--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -281,12 +281,14 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       </div>
     </div>
     <div class="col-xs-12 col-md-9">
-      <p>Sur cette page, vous trouverez des renseignements sur votre demande  d&rsquo;assurance-emploi. Vous pouvez également gérer votre compte, en&nbsp;:</p>
-      <ul>
-        <li>mettant à jour vos coordonnées;</li>
-        <li>modifiant  les renseignements concernant le dépôt direct;</li>
-        <li>vous inscrivant au service d&rsquo;alertes par courriel  (Alertez-moi).</li>
-      </ul>
+    
+        <p><span id="pageTemplate:pt_pg_template">Sur   cette page, vous trouverez des renseignements sur votre demande   d'assurance-emploi. Vous pouvez également gérer votre compte, en :</span></p>
+        <ul>
+          <li><span id="pageTemplate:pt_pg_template">mettant à jour vos coordonnées;</span></li>
+          <li><span id="pageTemplate:pt_pg_template">modifiant vos renseignements concernant le dépôt direct;</span></li>
+          <li><span id="pageTemplate:pt_pg_template">vous inscrivant au service d'alertes par courriel (Alertez-moi).</span></li>
+        </ul>
+
       
       <section>
         <div class="panel panel-default">
@@ -295,9 +297,11 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <h2 id="a1-1" class="mrgn-tp-0">Renseignements sur votre dernière demande&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div><br />
-            <p>Quand vous choisissez  Visualiser l&rsquo;état de ma demande et ma correspondance (Alertez-moi), vous pouvez  consulter l&rsquo;état de votre demande et vos derniers messages.</p>
-            <p>Vous pouvez également  recevoir des avis par courriel en vous inscrivant au service Alertez-moi.</p>
-            <p>Si votre demande est  active, les options Dernière demande et Renseignements de paiements affichent  des détails tels que, la date de début, le taux de prestations hebdomadaire, le  nombre de semaines payées et les détails du paiement. </p>
+            <p>Quand vous choisissez Visualiser l'état de ma demande et ma correspondance (Alertez-moi), vous pouvez consulter l'état de votre demande et vos derniers messages.</p>
+
+<p>Vous pouvez également recevoir des avis par courriel en vous inscrivant au service Alertez-moi.</p>
+
+<p>Si votre demande est active, les options Dernière demande et Renseignements de paiements affichent des détails tels que, la date de début, le taux de prestations hebdomadaire, le nombre de semaines payées et les détails du paiement.</p>
 <div>
   <div> </div>
 </div>
@@ -316,9 +320,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <h2 id="a1-2" class="mrgn-tp-0">Visualiser ou modifier mes renseignements personnels&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div><br />
-            <p>Dans cette section,  vous pouvez consulter ou modifier votre adresse postale, numéro de téléphone,  les renseignements sur le dépôt direct et langue de préférence. <a name="4"></a>Les  changements peuvent être effectués directement dans MDSC-Assurance emploi  seulement pendant les heures de service de votre province ou territoire.</p>
+            <p>Dans cette section, vous pouvez consulter ou modifier votre adresse postale, numéro de téléphone, les renseignements sur le dépôt direct et langue de préférence. Les changements peuvent être effectués directement dans MDSC-Assurance emploi seulement pendant les heures de service de votre province ou territoire.</p>
 <details>
-              <summary><!--Service times-->Heures d’ouverture de votre province ou territoire</summary>
+              <summary><!--Service times-->Heures de service de votre province ou territoire</summary>
               <ul>
 				<li><strong>Canada atlantique:</strong> de 6 h à 21 h heure normale de l'Atlantique (HNA) du lundi au vendredi et de 6 h à 17 h HNA le samedi et le dimanche. </ li>
 <li><strong> Québec:</strong> de 6 h à 22 h heure normale de l'Est (HNE) du lundi au vendredi et de 6 h à 16 h 30 HNE le samedi et le dimanche. </ li >
@@ -360,8 +364,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-          <p>Les Feuillets de  renseignements fiscaux (T4E) vous permettent de consulter et d&rsquo;imprimer vos T4E  pour les 6 dernières années, si vous avez reçu des prestations  d&rsquo;assurance-emploi.</p>
-          <p>Les options  d&rsquo;expédition de mon feuillet de renseignements fiscaux vous permettent de  choisir de recevoir vos T4E électroniquement ou par la poste. Vous pouvez  modifier votre choix plus tard et quand même consulter et imprimer vos T4E.</p>
+          <p>Les   Feuillets de renseignements fiscaux (T4E) vous permettent de consulter   et d'imprimer vos T4E pour les 6 dernières années, si vous avez reçu des   prestations d'assurance-emploi.></p>
+          <p>Les options d'expédition de mon feuillet de renseignements fiscaux vous permettent de choisir de recevoir vos T4E électroniquement ou par la poste. Vous pouvez modifier votre choix plus tard et quand même consulter et imprimer vos T4E.</p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax_Slips_T4E-fr.html';" type="button" class="btn btn-default">Feuillet de renseignements fiscaux (T4E)</button></li>
           <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax-Slips-Mailing-fr.html';" type="button" class="btn btn-default">Les options d'expédition de mon feuillet de renseignements fiscaux</button></li>
@@ -374,7 +378,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <h2 id="a1-5" class="mrgn-tp-0">Demandes antérieures&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
           </div><br />
-            <p>Demandes antérieures  affiche vos demandes d&rsquo;assurance-emploi antérieures. Vous pouvez choisir une  demande pour en consulter des renseignements particuliers, incluant les détails  du paiement.</p>
+            <p><span id="pageTemplate:pt_pg_template2"><span id="pageTemplate:pt_pg_content"><span id="pageTemplate:j_id__ctru6pc3">Demandes   antérieures affiche vos demandes d'assurance-emploi antérieures. Vous   pouvez choisir une demande pour en consulter des renseignements   particuliers, incluant les détails du paiement.</span></span></span></p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"> <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/past-claims-fr.html';" type="button" class="btn btn-default">Demandes antérieures</button></li>
 		  </ul>
@@ -387,7 +391,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-          <p>Les formulaires en  ligne vous permettent de soumettre des renseignements électroniquement. Cette  option n&rsquo;est accessible que si votre demande est active et est restreinte à  certains genres de prestations.</p>
+          <p><span id="pageTemplate:pt_pg_template3"><span id="pageTemplate:pt_pg_content2"><span id="pageTemplate:j_id__ctru6pc">Les   formulaires en ligne vous permettent de soumettre des renseignements   électroniquement. Cette option n'est accessible que si votre demande est   active et est restreinte à certains genres de prestations.</span></span></span></p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS-fr.html';" type="button" class="btn btn-default">Formulaires en ligne (Soumettre de nouveaux renseignements au sujet de ma demande)</button></li>
 		  </ul>
@@ -412,7 +416,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <h2 id="a1-8" class="mrgn-tp-0">Province de résidence&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
           </div><br />
-            <p>Province de résidence  vous permet de choisir la province dans laquelle vous résidez et demandez des prestations  d&rsquo;assurance-emploi. Choisissez la province exacte pour accéder à vos  renseignements d&rsquo;assurance-emploi.</p>
+            <p>Province de résidence vous permet de choisir la province dans laquelle vous résidez et demandez des prestations d'assurance-emploi. Choisissez la province exacte pour accéder à vos renseignements d'assurance-emploi.</p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/province-fr.html';" type="button" class="btn btn-default">Province de résidence</button></li>
 		  </ul>
@@ -425,7 +429,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-          <p>Des erreurs, ça arrive  vous permet d&rsquo;en apprendre davantage sur la manière de déclarer des erreurs et  de demander des modifications.</p>
+          <p>Des erreurs, ça arrive vous permet d'en apprendre davantage sur la manière de déclarer des erreurs et de demander des modifications.</p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/mistakes-can-happen-fr.html';" type="button" class="btn btn-default">Des erreurs, ça arrive</button></li>
 		  </ul>
