--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -205,7 +205,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
                 <!--<li><a href="###">Status of my EI claim/application</a></li>-->
                 <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html">Payment information</a></li>
                  <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/records-of-employment.html">Records of Employment</a></li>
-				  <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html">Latest EI claim details</a></li>
+				  <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html">Latest claim</a></li>
                
                 <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Employment Insurance - More</a></li>
               </ul>
