--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -252,9 +252,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <!-- List group -->
         <ul class="list-group">
           <li class="list-group-item"><a href="#a1-1">Information on your latest claim</a></li>
-          <li class="list-group-item"><a href="#a1-2">View/Change my Personal Information</a></li>
+          <li class="list-group-item"><a href="#a1-2">View/Change my personal information</a></li>
           <li class="list-group-item"><a href="#a1-3">Records of Employment</a></li>
-          <li class="list-group-item"><a href="#a1-4">Tax Information</a></li>
+          <li class="list-group-item"><a href="#a1-4">Tax information</a></li>
           <li class="list-group-item"><a href="#a1-5">Past claims</a></li>
           <li class="list-group-item"><a href="#a1-6">eForms</a></li>
           <li class="list-group-item"><a href="#a1-7">Self-employed</a></li>
@@ -280,12 +280,14 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       </div>
     </div>
     <div class="col-xs-12 col-md-9">
-      <p>On this page, you  can get information on your Employment Insurance (EI) claims. You can also manage your account by:</p>
-      <ul>
-        <li>updating your contact information</li>
-        <li>modifying your direct deposit information</li>
-        <li>registering for the email notification service (Alert me)</li>
-      </ul>
+ 
+        <p>On this page, you can get information on your Employment Insurance (EI) claims. You can also manage your account by:</p>
+        <ul>
+          <li>updating your contact information</li>
+          <li>modifying your direct deposit information</li>
+          <li>registering for the email notification  service (Alert me)</li>
+        </ul>
+      <p>&nbsp;</p>
       <section>
         <div class="panel panel-default">
           <div class="panel-body">
@@ -313,7 +315,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="mrgn-tp-md header-bg">
-              <h2 id="a1-2" class="mrgn-tp-0">View/Change my Personal Information&nbsp;</h2>
+              <h2 id="a1-2" class="mrgn-tp-0">View/Change my personal information&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
@@ -329,7 +331,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             </details>
             <ul class="list-unstyled list-inline">
 				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/address-telephone.html';" type="button" class="btn btn-default">Mailing address and telephone number</button></li>
-            <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/direct-deposit.html';" type="button" class="btn btn-default">Direct Deposit (EI)</button></li>
+            <li class="mrgn-bttm-sm">
+              <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/direct-deposit.html';" type="button" class="btn btn-default">Direct deposit (EI)</button></li>
             <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/language.html';" type="button" class="btn btn-default">Preferred language</button></li>
 		    </ul>
           </div>
@@ -358,7 +361,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
 			<div class="mrgn-tp-md header-bg">
-              <h2 id="a1-4" class="mrgn-tp-0">Tax Information</h2>
+              <h2 id="a1-4" class="mrgn-tp-0">Tax information</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
