--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
@@ -279,9 +279,11 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <li class="list-group-item"><a href="">Présenter ma demande de programme d'Allocation au survivant</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Présenter ma demande de prestations internationales</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Calculatrice du revenu de retraite canadienne</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+			<li class="list-group-item"><a href="">Faire une demande de passeport</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Index du RPC</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Index de la SV</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
-          <li class="list-group-item"><a href="/MSCA-Prototype/scenarioA/services/my-account/cpp-contact-fr.html">Contactez-nous</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="/MSCA-Prototype/scenarioA/services/my-account/cpp-contact-fr.html">Contactez le RPC</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+			<li class="list-group-item"><a href="/MSCA-Prototype/scenarioA/services/my-account/oas-contact-fr.html">Contactez la SV</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
         </ul>
       </div>
     </div>
