--- a/scenarioA/services/my-account/MSCA/lobby-wax.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax.html
@@ -297,7 +297,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 				<li>Canada Child Benefits</li>
 		  </ul>
 	  
-        <a href="./bridge-to-CRA-account.html" class="mrgn-tp-0 btn btn-default">Access CRA</a> 
+        <a href="./access-cra.html" class="mrgn-tp-0 btn btn-default">Access CRA</a> 
 	  <!--</div>
     </div>
 		  </section>
