--- a/scenarioA/services/my-account/MSCA/lobby-wax-fr.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax-fr.html
@@ -297,7 +297,7 @@ Dernière ouverture de session&nbsp;:
               <li>vos Prestations canadiennes  pour enfants.</li>
 		  </ul>
 	  
-        <a href="./bridge-to-CRA-account.html" class="mrgn-tp-0 btn btn-default">Accès à l'ARC</a> 
+        <a href="./access-cra-fr.html" class="mrgn-tp-0 btn btn-default">Accès à l'ARC</a> 
 	  <!--</div>
     </div>
 		  </section>
