--- a/scenarioA/services/my-account/MSCA/access-cra-fr.html
+++ b/scenarioA/services/my-account/MSCA/access-cra-fr.html
@@ -160,7 +160,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <section id="wb-lng" class="text-right col-xs-3 col-sm-4 col-md-6">
           <h2 class="wb-inv">Language selection</h2>
           <ul class="list-inline margin-bottom-none">
-            <li><a lang="fr" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/access-cra.html">English</a></li>
+            <li><a lang="fr" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">English</a></li>
           </ul>
         </section>
       </div>
@@ -236,7 +236,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
   </header>
 </div>
 <main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
-<h1 class="wb-inv" id="wb-cont" property="name">Inscription et authentification</h1>
+<h1 id="wb-cont" property="name">Inscription et authentification</h1>
 
   <br />
 	<section class="alert alert-info">
