--- a/scenarioA/services/my-account/MSCA/access-cra.html
+++ b/scenarioA/services/my-account/MSCA/access-cra.html
@@ -237,7 +237,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
   </header>
 </div>
 <main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
-  <h1 class="wb-inv" id="wb-cont" property="name">Registration and Authentication</h1>
+  <h1 id="wb-cont" property="name">Registration and Authentication</h1>
 
   <br />
 	<section class="alert alert-info">
