--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
@@ -148,8 +148,9 @@
 	<a class="btn btn-default" href="#" role="button">Help</a><br></section>
 	
 	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
-	
-<h1 property="name" id="wb-cont" dir="ltr">Latest claim status</h1>
+	<h1 class="wb-inv" property="name" id="wb-cont" dir="ltr">Register for Alert Me
+</h1>
+
 <div class="row">
   <div class="col-xs-12 col-md-3 pull-left">
 	  <nav role="navigation" id="wb-sec" typeof="SiteNavigationElement" class="visible-md visible-lg">
@@ -180,6 +181,7 @@
 
   </div>
   <div class="col-xs-12 col-md-9">
+	  <h1>Register for Alert Me</h1>
     <div class="well well-sm"> The status of your claim/application, relevant to the most recent message posted below is <strong>Decision Made</strong>. </div>
     <div class="panel panel-default"> 
       <!-- Default panel contents -->
