--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
@@ -148,7 +148,7 @@
 	<a class="btn btn-default" href="#" role="button">Help</a><br></section>
 	
 	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
-	<h1 class="wb-inv" property="name" id="wb-cont" dir="ltr">Register for Alert Me
+	<h1 class="wb-inv" property="name" id="wb-cont" dir="ltr">Latest Claim Status
 </h1>
 
 <div class="row">
@@ -181,7 +181,7 @@
 
   </div>
   <div class="col-xs-12 col-md-9">
-	  <h1>Register for Alert Me</h1>
+	  <h1>Latest Claim Status</h1>
     <div class="well well-sm"> The status of your claim/application, relevant to the most recent message posted below is <strong>Decision Made</strong>. </div>
     <div class="panel panel-default"> 
       <!-- Default panel contents -->
