--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -319,7 +319,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-            <p>In this section,  you can check or modify your mailing address, telephone number, direct deposit  information and preferred language. Modifications can only be done directly in My Service Canada Account - EI during the hours of operation in your province or territory.</p>
+            <p>In this section, you can check or modify your mailing address, telephone number, direct deposit, preferred language, and view your EI access code. Modifications can only be done directly in My Service Canada Account – EI during the hours of operation in your province or territory.</p>
 <details>
               <summary><!--Service times-->Hours of operation for your Province or Territory</summary>
               <ul>
@@ -332,7 +332,11 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <ul class="list-unstyled list-inline">
 				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/address-telephone.html';" type="button" class="btn btn-default">Mailing address and telephone number</button></li>
             <li class="mrgn-bttm-sm">
-              <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/direct-deposit.html';" type="button" class="btn btn-default">Direct deposit (EI)</button></li>
+              <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/direct-deposit.html';" type="button" class="btn btn-default">Direct deposit</button></li>
+				
+				<li class="mrgn-bttm-sm">
+              <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/access-code.html';" type="button" class="btn btn-default">Access code</button></li>
+				
             <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/language.html';" type="button" class="btn btn-default">Preferred language</button></li>
 		    </ul>
           </div>
