--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -320,7 +320,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <h2 id="a1-2" class="mrgn-tp-0">Visualiser ou modifier mes renseignements personnels&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div><br />
-            <p>Dans cette section, vous pouvez consulter ou modifier votre adresse postale, numéro de téléphone, les renseignements sur le dépôt direct et langue de préférence. Les changements peuvent être effectués directement dans MDSC-Assurance emploi seulement pendant les heures de service de votre province ou territoire.</p>
+            <p>Dans cette section, vous pouvez consulter ou modifier votre adresse postale, numéro de téléphone, dépôt direct, langue de préférence et consulter votre code d'accès à l'assurance-emploi. Les changements peuvent être effectuées directement dans Mon dossier Service Canada – Assurance emploi seulement pendant les heures de service de votre province ou territoire.</p>
 <details>
               <summary><!--Service times-->Heures de service de votre province ou territoire</summary>
               <ul>
@@ -332,6 +332,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <ul class="list-unstyled list-inline">
 				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/address-telephone-fr.html';" type="button" class="btn btn-default">Adresse postale et numéro de téléphone</button></li>
             <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/direct-deposit-fr.html';" type="button" class="btn btn-default">Dépôt direct</button></li>
+				
+				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/access-code-fr.html';" type="button" class="btn btn-default">Code d'accèss</button></li>
             <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/language-fr.html';" type="button" class="btn btn-default">Langue de préférence</button></li>
 		    </ul>
           </div>
