--- a/scenarioA/services/my-account/MSCA/EI/personal-information/access-code.html
+++ b/scenarioA/services/my-account/MSCA/EI/personal-information/access-code.html
@@ -136,8 +136,8 @@
       <div class="container">
         <div class="row">
           <ol class="breadcrumb">
-            <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">MSCA</a></li>
-            <li> <a href="###">EI</a> </li>
+            <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">My Service Canada Account</a></li>
+            <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html">Employment Insurance</a> </li>
             <li> Access code</li>
           </ol>
         </div>
