--- a/scenarioA/services/my-account/MSCA/lobby-wax.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax.html
@@ -253,7 +253,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 	<section class="alert alert-info">
 
 		<h2 class="h3">Verify your address</h2>
-  <p>Please check that your mailing address is correct in My  Service Canada Account (MSCA)  under the View/Change my Personal Information section of EI and CPP / OAS.&nbsp;</p>
+  <p>Please check that your mailing address is correct in My Service Canada Account under the View/Change my Personal Information section of Employment Insurance and Canada Pension Plan/Old Age Security.&nbsp;</p>
 </section>
 
   <section>
@@ -293,8 +293,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 				<li>tax credits</li>
 				<li>account balance</li>
 				<li>Registered Retirement Savings Plan (RRSP)</li>
-				<li>Tax Free Savings Account (TFSA)</li>
-				<li>Canada Child Benefits</li>
+				<li>Tax-Free Savings Account (TFSA)</li>
+				<li>Canada Child Benefit (CCB)</li>
 		  </ul>
 	  
         <a href="./access-cra.html" class="mrgn-tp-0 btn btn-default">Access CRA</a> 
