--- a/scenarioA/services/my-account/MSCA/lobby-wax-fr.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax-fr.html
@@ -253,7 +253,8 @@ Dernière ouverture de session&nbsp;:
 	<section class="alert alert-info">
 
 <h2 class="h3">Vérification de votre adresse</h2>
-  <p>Veuillez vérifier l&rsquo;exactitude de votre adresse postale dans Mon dossier  Service Canada (MDSC) dans la section Visualiser/modifier mes renseignements personnels de l&rsquo;AE et du RPC/SV.  &nbsp;</p>
+		<p>Veuillez vérifier l&rsquo;exactitude de votre adresse postale dans Mon dossier Service Canada dans la section Visualiser/modifier mes renseignements personnels de l&rsquo;Assurance-emploi et du Régime de pensions du Canada/Sécurité de la vieillesse.&nbsp;</p>
+		
 </section>
 
   <section>
@@ -293,7 +294,7 @@ Dernière ouverture de session&nbsp;:
               <li>vos crédits d&rsquo;impôt;</li>
               <li>votre solde de compte;</li>
               <li>votre Régime enregistré d&rsquo;épargne-retraite (REER);</li>
-              <li>votre compte d&rsquo;épargne libre d&rsquo;impôt; </li>
+              <li>votre compte d&rsquo;épargne libre d&rsquo;impôt (CELI); </li>
               <li>vos Prestations canadiennes  pour enfants.</li>
 		  </ul>
 	  
