--- a/scenarioA/services/my-account/MSCA/lobby-wax-fr.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax-fr.html
@@ -295,7 +295,7 @@ Dernière ouverture de session&nbsp;:
               <li>votre solde de compte;</li>
               <li>votre Régime enregistré d&rsquo;épargne-retraite (REER);</li>
               <li>votre compte d&rsquo;épargne libre d&rsquo;impôt (CELI); </li>
-              <li>vos Prestations canadiennes  pour enfants.</li>
+              <li>vos Allocation canadienne pour enfants (ACE).</li>
 		  </ul>
 	  
         <a href="./access-cra-fr.html" class="mrgn-tp-0 btn btn-default">Accès à l'ARC</a> 
