--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -362,7 +362,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/My-address.html';" type="button" class="btn btn-default">Address</button></li>
           <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/My-telephone.html';" type="button" class="btn btn-default">Telephone number</button></li>
-         <li class="mrgn-bttm-sm"> <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html';" type="button" class="btn btn-default">Direct deposit (CPP/OAS)</button></li>
+         <li class="mrgn-bttm-sm"> <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html';" type="button" class="btn btn-default">Direct deposit</button></li>
 		  </ul>
         </div>
       </div>
