--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -366,7 +366,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-          <p>Les   Feuillets de renseignements fiscaux (T4E) vous permettent de consulter   et d'imprimer vos T4E pour les 6 dernières années, si vous avez reçu des   prestations d'assurance-emploi.></p>
+          <p>Les   Feuillets de renseignements fiscaux (T4E) vous permettent de consulter   et d'imprimer vos T4E pour les 6 dernières années, si vous avez reçu des   prestations d'assurance-emploi.</p>
           <p>Les options d'expédition de mon feuillet de renseignements fiscaux vous permettent de choisir de recevoir vos T4E électroniquement ou par la poste. Vous pouvez modifier votre choix plus tard et quand même consulter et imprimer vos T4E.</p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax_Slips_T4E-fr.html';" type="button" class="btn btn-default">Feuillet de renseignements fiscaux (T4E)</button></li>
