--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -386,7 +386,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <div class="brdr-bttm-fade"></div>
           </div>
           <br />
-          <p>In this section,  you can  view your contributions, pensionable earnings, and view your estimated monthly CPP benefits. <!--You can also request a Statement of Contributions by mail.--></p>
+          <p>In this section, you can view your contributions, pensionable earnings,  and view your estimated monthly CPP benefits. You can also request for your  Statement of Contributions by mail.</p>
+          <p><!--You can also request a Statement of Contributions by mail.--></p>
           <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html';" type="button" class="btn btn-default">CPP contributions</button></li>
 			  <!--<li class="mrgn-bttm-sm"><button onclick="window.location.href = 'MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/request-statement.html';" type="button" class="btn btn-default">Statement of Contributions by mail</button></li>-->
