--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
@@ -384,7 +384,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <div class="brdr-bttm-fade"></div>
           </div>
           <br />
-          <p>Dans cette section, vous pouvez consulter vos cotisations, vos gains  ouvrant droit à pension ainsi que l&rsquo;estimation de vos prestations mensuelles du  RPC.</p>
+          <p>Dans cette section, vous pouvez consulter vos cotisations, vos gains  ouvrant droit à pension ainsi que l&rsquo;estimation de vos prestations mensuelles du  RPC. Vous pouvez également demander votre État de compte du cotisant par la poste.</p>
           <p><!--You can also request a Statement of Contributions by mail.--></p>
           <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions-fr.html';" type="button" class="btn btn-default">Cotisations au RPC</button></li>
