--- a/scenarioA/services/my-account/MSCA/EI/alert-me-fr.html
+++ b/scenarioA/services/my-account/MSCA/EI/alert-me-fr.html
@@ -242,8 +242,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 <section class="container">
 	<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
 	
-<h1 property="name" id="wb-cont" dir="ltr">S'inscrire à Alertez-moi
-</h1>
+<h1 class="wb-inv" property="name" id="wb-cont" dir="ltr">S'inscrire à Alertez-moi</h1>
 <div class="row">
   <div class="col-xs-12 col-md-3 pull-left">
 	  <nav role="navigation" id="wb-sec" typeof="SiteNavigationElement" class="visible-md visible-lg">
@@ -274,6 +273,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 
   </div>
   <div class="col-xs-12 col-md-9">
+	  <h1>S'inscrire à Alertez-moi</h1>
   <h2>Énoncé de confidentialité</h2>
   
   <p>Les renseignements que vous fournissez sont recueillis en vertu de la <em>Loi sur l'assurance-emploi</em> et la <em>Loi sur le ministère de l'Emploi et du Développement social</em> aux fins de la gestion de votre demande auprès du programme de prestations d'assurance-emploi, notamment aux fins de votre inscription au service d'avis électroniques Alertez-moi de Mon dossier Service Canada (MDSC).</p>
