--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -394,16 +394,16 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-          <p>Les formulaires en ligne vous permettent de soumettre de nouveaux  renseignements au sujet de votre demande électroniquement pour&nbsp;: </p>
+          <p>Les formulaires en ligne vous permettent de soumettre de nouveaux  renseignements sur votre demande pour&nbsp;: </p>
           <ul>
-            <li>une absence du Canada  (vacance et autres raisons);</li>
-            <li>un cours ou un programme de  formation;</li>
-            <li>des renseignements sur  l&rsquo;autre parent aux fins des prestations parentales.</li>
+            <li>une absence du Canada (vacance et autres raisons);</li>
+            <li>un cours ou un programme de formation;</li>
+            <li>des renseignements sur l&rsquo;autre parent aux fins des  prestations parentales.</li>
           </ul>
-          <p>Les formulaires en ligne disponibles dépendront d&rsquo;une demande active pour  certains genres de prestations.</p>
+          <p>Les formulaires en ligne disponibles dépendront de l&rsquo;état de votre  demande et du genre de prestation que vous recevez.</p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm">
-			  <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS-fr.html';" type="button" class="btn btn-default">Soumettre un formulaire en ligne</button></li>
+		    <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS-fr.html';" type="button" class="btn btn-default">Soumettre un formulaire en ligne</button></li>
 		  </ul>
         </div>
       </div>
