--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -401,16 +401,16 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-          <p>eForms allow you to submit new information regarding your claim electronically  for: </p>
+          <p>eForms allow you to submit new  information on your claim for: </p>
           <ul>
-            <li>an absence from Canada  (vacation or other reason)</li>
-            <li>a course or training program</li>
-            <li>other parent information for  parental benefits</li>
+            <li>an absence from  Canada (vacation or other reason)</li>
+            <li>a course or training  program</li>
+            <li>other parent  information for parental benefits</li>
           </ul>
-          <p>The available eForms offered will depend on having an active claim for  certain benefit types.</p>
+          <p>The available eForms will depend  on the status of your claim and the type of benefit you are receiving.</p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm">
-			  <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html';" type="button" class="btn btn-default">Submit eForms </button></li>
+		    <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS.html';" type="button" class="btn btn-default">Submit eForms </button></li>
 		  </ul>
         </div>
       </div>
