--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -229,8 +229,8 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="container">
         <div class="row">
           <ol class="breadcrumb">
-		   <li><a href="##">Canada.ca</a></li>
             <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">My Service Canada Account</a></li>
+			  <li>Canada Pension Plan/Old Age Security</li>
           </ol>
         </div>
       </div>
